@@ -8,7 +8,8 @@
     handle progress gt 100%
     remove deadlock on quick dir change
     new swedish translation partially completed (40%)
-    task manager Path column renamed Dir
+    task manager Path column renamed Folder
+    ellipsize Folder, Item, To task manager columns
 0.7.8   2012-06-16:
     use/update mimeapps.list over defaults.list closes #71
     added design mode on mime apps opens MIME menu
